--- a/order/index.html
+++ b/order/index.html
@@ -16,18 +16,15 @@
 
   <link rel="stylesheet" href="style.css">
 
-
-  <!-- Open Graph (only affects link previews; page still works if missing) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Stone Grill — Online Order">
   <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
   <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/order/">
 </head>
 <body>
-  <!-- HEADER (fixed) -->
   <header class="app-header">
     <div class="brand">
-      <!-- no src here; main.js will resolve best match -->
       <img id="logoImg" alt="Stone Grill" class="logo">
       <div class="brand-text">
         <h1>Stone Grill</h1>
@@ -41,18 +38,15 @@
     </div>
   </header>
 
-  <!-- MAIN -->
   <main class="app-main">
-    <!-- LEFT: MENU -->
     <section class="menu-col">
       <div class="category-bar" id="categoryBar"></div>
       <div id="menuList" class="menu-list"></div>
     </section>
 
-    <!-- RIGHT: CART + CUSTOMER INFO -->
     <aside class="cart-col">
       <div class="card">
-        <h2 class="card-title">🧾 Your Order</h2>
+        <h2 class="card-title">🦾 Your Order</h2>
         <div id="cartItems" class="cart-items"></div>
         <div class="cart-actions">
           <button id="clearCartBtn" class="btn ghost">Clear</button>
@@ -105,7 +99,7 @@
     </aside>
   </main>
 
-  <!-- FLOATING CATEGORY POPUP -->
+  <!-- Category Popup -->
   <div id="categoryPopup" class="popup-backdrop hidden">
     <div class="popup">
       <button class="popup-close" aria-label="Close">×</button>
@@ -114,7 +108,7 @@
     </div>
   </div>
 
-  <!-- ITEM DETAIL POPUP (long-press) -->
+  <!-- Item Detail Popup -->
   <div id="itemPopup" class="popup-backdrop hidden">
     <div class="popup">
       <button class="popup-close" aria-label="Close">×</button>
@@ -122,7 +116,7 @@
     </div>
   </div>
 
-  <!-- SUCCESS + GCash QR (resolved at runtime) -->
+  <!-- Success + GCash QR Popup -->
   <div id="successPopup" class="popup-backdrop hidden">
     <div class="popup">
       <button class="popup-close" aria-label="Close">×</button>
@@ -139,12 +133,10 @@
     </div>
   </div>
 
-  <!-- FLOATING MESSAGE -->
   <div id="toast" class="toast hidden"></div>
 
-<script src="config.js"></script>
-<script src="main.js"></script>
-  
+  <script src="config.js"></script>
+  <script src="main.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('pwa/sw.js').catch(()=>{});
