--- a/order/index.html
+++ b/order/index.html
@@ -1,146 +1,236 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stone Grill — Online Order</title>
-  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant — Enjoyable & Relaxing." />
+/* === Global Reset === */
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: #fdfdfd;
+  color: #222;
+}
 
-  <!-- PWA -->
-  <link rel="manifest" href="pwa/manifest.webmanifest">
-  <meta name="theme-color" content="#ff7a00">
+button {
+  cursor: pointer;
+}
 
-  <!-- Icons (keep these; they won't break the page if 404) -->
-  <link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
+/* === Header === */
+.app-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+  background: #ff7a00;
+  color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-  <link rel="stylesheet" href="style.css">
+.brand {
+  display: flex;
+  align-items: center;
+}
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Stone Grill — Online Order">
-  <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
-  <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/order/">
-</head>
-<body>
-  <header class="app-header">
-    <div class="brand">
-      <img id="logoImg" alt="Stone Grill" class="logo">
-      <div class="brand-text">
-        <h1>Stone Grill</h1>
-        <p>Enjoyable & Relaxing</p>
-      </div>
-    </div>
-    <div class="cart-summary">
-      <div class="total-label">Total</div>
-      <div id="cartTotal" class="total-value">₱0.00</div>
-      <button id="checkoutBtn" class="btn primary">Checkout</button>
-    </div>
-  </header>
+.logo {
+  width: 48px;
+  height: 48px;
+  margin-right: 10px;
+}
 
-  <main class="app-main">
-    <section class="menu-col">
-      <div class="category-bar" id="categoryBar"></div>
-      <div id="menuList" class="menu-list"></div>
-    </section>
+.brand-text h1 {
+  margin: 0;
+  font-size: 1.4em;
+}
 
-    <aside class="cart-col">
-      <div class="card">
-        <h2 class="card-title">🦾 Your Order</h2>
-        <div id="cartItems" class="cart-items"></div>
-        <div class="cart-actions">
-          <button id="clearCartBtn" class="btn ghost">Clear</button>
-        </div>
-      </div>
+.cart-summary {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
-      <div class="card">
-        <h2 class="card-title">👤 Customer Info</h2>
-        <form id="orderForm" autocomplete="on">
-          <label>Full Name
-            <input type="text" id="fullName" required placeholder="Juan Dela Cruz">
-          </label>
+.total-label {
+  font-weight: bold;
+}
 
-          <label>Mobile Number
-            <input type="tel" id="mobileNumber" inputmode="numeric" required placeholder="+63 9XX XXX XXXX">
-          </label>
+.btn.primary {
+  background: #fff;
+  color: #ff7a00;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+}
 
-          <label>Order Type</label>
-          <div class="inline">
-            <label><input type="radio" name="orderType" value="Dine-in" required> Dine-in</label>
-            <label><input type="radio" name="orderType" value="Take-out" required> Take-out</label>
-          </div>
+.btn.ghost {
+  background: transparent;
+  border: 1px solid #ff7a00;
+  color: #ff7a00;
+  padding: 6px 12px;
+  border-radius: 6px;
+}
 
-          <div id="personsWrap" class="hidden">
-            <label>Number of Persons
-              <input type="number" id="persons" min="1" value="1">
-            </label>
-          </div>
+.btn.wide {
+  width: 100%;
+  margin-top: 1em;
+}
 
-          <div class="inline-2">
-            <label>Date
-              <input type="date" id="orderDate" required>
-            </label>
-            <label>Time
-              <input type="time" id="orderTime" required>
-            </label>
-          </div>
+/* === Layout === */
+.app-main {
+  display: flex;
+  flex-direction: row;
+  padding: 16px;
+  gap: 20px;
+}
 
-          <label>Special Requests
-            <textarea id="specialRequests" rows="3" placeholder="Less spicy, extra rice, no peanuts…"></textarea>
-          </label>
+.menu-col {
+  flex: 2;
+}
 
-          <button type="submit" class="btn primary wide">Submit Order</button>
-        </form>
-      </div>
+.cart-col {
+  flex: 1;
+}
 
-      <div class="card muted">
-        <p>💬 Need help? Message us on Facebook or call <a href="tel:0535680539">053 568 0539</a>.</p>
-      </div>
-    </aside>
-  </main>
+/* === Category Bar === */
+.category-bar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px;
+  overflow-x: auto;
+}
 
-  <!-- Category Popup -->
-  <div id="categoryPopup" class="popup-backdrop hidden">
-    <div class="popup">
-      <button class="popup-close" aria-label="Close">×</button>
-      <h3 class="popup-title">Browse Categories</h3>
-      <div id="popupCategories" class="popup-grid"></div>
-    </div>
-  </div>
+.category-bar button {
+  background: #ff7a00;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 8px 14px;
+  font-size: 16px;
+  white-space: nowrap;
+  flex: 0 0 auto;
+}
 
-  <!-- Item Detail Popup -->
-  <div id="itemPopup" class="popup-backdrop hidden">
-    <div class="popup">
-      <button class="popup-close" aria-label="Close">×</button>
-      <div id="itemDetail"></div>
-    </div>
-  </div>
+/* === Menu List === */
+.menu-list {
+  display: grid;
+  gap: 10px;
+  padding-top: 10px;
+}
 
-  <!-- Success + GCash QR Popup -->
-  <div id="successPopup" class="popup-backdrop hidden">
-    <div class="popup">
-      <button class="popup-close" aria-label="Close">×</button>
-      <h3 class="popup-title">Order Received ✅</h3>
-      <p>Please settle your payment to proceed. Scan the GCash QR below:</p>
-      <div class="qr-wrap">
-        <img id="gcashQR" alt="GCash QR">
-      </div>
-      <p class="small">After paying, staff will process your order. Keep your reference number.</p>
-      <div class="inline">
-        <button class="btn" id="paidBtn">I’ve Paid</button>
-        <button class="btn ghost" id="copyRefBtn">Copy Payment Instructions</button>
-      </div>
-    </div>
-  </div>
+.menu-item {
+  padding: 10px;
+  background: #fff4e6;
+  border-radius: 8px;
+  border: 1px solid #ffa94d;
+}
 
-  <div id="toast" class="toast hidden"></div>
+/* === Cart and Form === */
+.card {
+  background: #fff;
+  padding: 14px;
+  border-radius: 10px;
+  margin-bottom: 1em;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+}
 
-  <script src="config.js"></script>
-  <script src="main.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('pwa/sw.js').catch(()=>{});
-    }
-  </script>
-</body>
-</html>
+.cart-items {
+  margin-top: 10px;
+}
+
+.card-title {
+  margin-top: 0;
+}
+
+.inline, .inline-2 {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.inline-2 > label {
+  flex: 1;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+
+input, textarea, select {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  box-sizing: border-box;
+}
+
+textarea {
+  resize: vertical;
+}
+
+/* === Popups === */
+.popup-backdrop {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup {
+  background: #fff;
+  padding: 20px;
+  border-radius: 14px;
+  max-width: 90%;
+  max-height: 90%;
+  overflow-y: auto;
+  position: relative;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+}
+
+.popup-close {
+  position: absolute;
+  right: 12px;
+  top: 10px;
+  font-size: 24px;
+  background: none;
+  border: none;
+  color: #444;
+}
+
+/* === QR === */
+.qr-wrap img {
+  width: 100%;
+  max-width: 280px;
+  display: block;
+  margin: 1em auto;
+}
+
+.toast {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #222;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 6px;
+  z-index: 9999;
+}
+
+/* === Responsive === */
+@media (max-width: 768px) {
+  .app-main {
+    flex-direction: column;
+  }
+
+  .category-bar {
+    justify-content: flex-start;
+  }
+
+  .category-bar button {
+    font-size: 14px;
+    padding: 6px 12px;
+  }
+}
