--- a/order/index.html
+++ b/order/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stone Grill — Online Order</title>
-  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant — Enjoyable & Relaxing." />
+  <title>Stone Grill -- Online Order</title>
+  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant -- Enjoyable & Relaxing." />
 
   <!-- PWA -->
   <link rel="manifest" href="pwa/manifest.webmanifest">
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Stone Grill — Online Order">
+  <meta property="og:title" content="Stone Grill -- Online Order">
   <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
   <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/order/">
@@ -65,14 +65,23 @@
 
     <aside class="cart-col">
       <!-- Cart -->
-      <div class="card">
-        <h2 class="card-title">🦾 Your Order</h2>
-        <div id="cartItems" class="cart-items"></div>
-        <div class="cart-actions">
-          <button id="clearCartBtn" class="btn ghost">Clear</button>
-        </div>
-      </div>
+      <div class="card highlight breathe">
+  <h2 class="card-title">🦾 Your Order</h2>
 
+  <div id="cartItems" class="cart-items"></div>
+
+  <!-- Subtotal row -->
+  <div class="cart-totals">
+    <div class="row">
+      <span>Subtotal</span>
+      <span id="cartSubtotal">₱0.00</span>
+    </div>
+  </div>
+
+  <div class="cart-actions">
+    <button id="clearCartBtn" class="btn ghost">Clear</button>
+  </div>
+</div>
       <!-- Customer Info -->
       <div class="card">
         <h2 class="card-title">👤 Customer Info</h2>
@@ -148,7 +157,7 @@
       </div>
       <p class="small">After paying, staff will process your order. Keep your reference number.</p>
       <div class="inline">
-        <button class="btn" id="paidBtn">I’ve Paid</button>
+        <button class="btn" id="paidBtn">I've Paid</button>
         <button class="btn ghost" id="copyRefBtn">Copy Payment Instructions</button>
       </div>
     </div>
