--- a/order/index.html
+++ b/order/index.html
@@ -3,181 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stone Grill -- Online Order</title>
-  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant -- Enjoyable & Relaxing." />
+  <title>Stone Grill — Online Order</title>
+  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant — Enjoyable & Relaxing." />
 
-  <!-- PWA -->
-  <link rel="manifest" href="pwa/manifest.webmanifest">
-  <meta name="theme-color" content="#ff7a00">
-
-  <!-- Icons -->
-  <link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
-
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Stone Grill -- Online Order">
-  <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
-  <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/order/">
-
-  <!-- ✅ Belt-and-suspenders: ensure hidden class wins even if CSS is stale -->
-  <style>
-    .hidden { display: none !important; }
-  </style>
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="app-header">
-    <div class="brand">
-      <img id="logoImg" src="assets/icons/logo.png" alt="Stone Grill" class="logo">
-      <div class="brand-text">
-        <h1>Stone Grill</h1>
-        <p>Enjoyable & Relaxing</p>
+
+  <!-- Sticky Header (logo always visible) -->
+  <header id="appHeader" class="header">
+    <div class="header-inner">
+      <div class="header-left">
+        <img src="assets/icons/icon-192.png" alt="Stone Grill" class="header-logo" />
+        <div class="header-brand">
+          <div class="brand-title">Stone Grill</div>
+          <div class="brand-tagline">Enjoyable & Relaxing</div>
+        </div>
       </div>
-    </div>
-    <div class="cart-summary">
-      <div class="total-label">Total</div>
-      <div id="cartTotal" class="total-value">₱0.00</div>
-      <button id="checkoutBtn" class="btn primary">Checkout</button>
+
+      <div class="header-right">
+        <div class="total-pill" title="Current total">
+          <span class="lbl">Total</span>
+          <strong id="cartTotal">₱0.00</strong>
+        </div>
+      </div>
     </div>
   </header>
 
-  <main class="app-main">
-    <section class="menu-col">
-      <!-- ✅ Category Buttons -->
-      <div class="category-bar" id="categoryBar">
-        <button onclick="showCategory('pork')">🐖 Pork</button>
-        <button onclick="showCategory('chicken')">🐓 Chicken</button>
-        <button onclick="showCategory('beef')">🐄 Beef</button>
-        <button onclick="showCategory('seafood')">🦐 Seafood</button>
-        <button onclick="showCategory('vegetables')">🥦 Veggies</button>
-        <button onclick="showCategory('noodles')">🍜 Noodles</button>
-        <button onclick="showCategory('bbq')">🔥 BBQ</button>
-        <button onclick="showCategory('soup')">🍲 Soup</button>
-        <button onclick="showCategory('specials')">⭐ Specials</button>
-        <button onclick="showCategory('drinks')">🥤 Drinks</button>
-      </div>
+  <!-- Category Bar -->
+  <section class="wrap">
+    <div id="categoryBar" class="category-bar"></div>
+  </section>
 
-      <!-- Product List -->
+  <!-- Layout -->
+  <main class="wrap grid-2">
+    <!-- Menu List -->
+    <section>
+      <h2 class="section-title">Menu</h2>
       <div id="menuList" class="menu-list"></div>
     </section>
 
-    <aside class="cart-col">
-      <!-- Cart -->
-      <div class="card highlight breathe">
-  <h2 class="card-title">🦾 Your Order</h2>
-
-  <div id="cartItems" class="cart-items"></div>
-
-  <!-- Subtotal row -->
-  <div class="cart-totals">
-    <div class="row">
-      <span>Subtotal</span>
-      <span id="cartSubtotal">₱0.00</span>
-    </div>
-  </div>
-
-  <div class="cart-actions">
-    <button id="clearCartBtn" class="btn ghost">Clear</button>
-  </div>
-</div>
-      <!-- Customer Info -->
+    <!-- Cart + Order Form -->
+    <aside>
       <div class="card">
-        <h2 class="card-title">👤 Customer Info</h2>
-        <form id="orderForm" autocomplete="on">
+        <h2 class="card-title">🦾 Your Order</h2>
+        <div id="cartItems" class="cart-items"></div>
+
+        <div class="cart-totals">
+          <div class="row">
+            <span>Subtotal</span>
+            <span id="cartSubtotal">₱0.00</span>
+          </div>
+        </div>
+
+        <div class="inline">
+          <button id="clearCart" class="btn ghost">Clear</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <h2 class="card-title">📋 Details</h2>
+        <form id="orderForm">
           <label>Full Name
-            <input type="text" id="fullName" required placeholder="Juan Dela Cruz">
+            <input id="fullName" type="text" required />
           </label>
 
           <label>Mobile Number
-            <input type="tel" id="mobileNumber" inputmode="numeric" required placeholder="+63 9XX XXX XXXX">
+            <input id="mobileNumber" type="tel" inputmode="tel" placeholder="+63" required />
           </label>
 
-          <label>Order Type</label>
-          <div class="inline">
-            <label><input type="radio" name="orderType" value="Dine-in" required> Dine-in</label>
-            <label><input type="radio" name="orderType" value="Take-out" required> Take-out</label>
-          </div>
-
-          <div id="personsWrap" class="hidden">
-            <label>Number of Persons
-              <input type="number" id="persons" min="1" value="1">
-            </label>
-          </div>
-
-          <div class="inline-2">
+          <div class="grid-2-sm">
             <label>Date
-              <input type="date" id="orderDate" required>
+              <input id="orderDate" type="date" required />
             </label>
             <label>Time
-              <input type="time" id="orderTime" required>
+              <input id="orderTime" type="time" required />
             </label>
           </div>
 
           <label>Special Requests
-            <textarea id="specialRequests" rows="3" placeholder="Less spicy, extra rice, no peanuts…"></textarea>
+            <textarea id="specialRequests" rows="3" placeholder="Optional"></textarea>
           </label>
 
-          <button type="submit" class="btn primary wide">Submit Order</button>
+          <button id="submitOrder" type="button" class="btn primary">Submit Order</button>
         </form>
-      </div>
-
-      <div class="card muted">
-        <p>💬 Need help? Message us on Facebook or call <a href="tel:0535680539">053 568 0539</a>.</p>
       </div>
     </aside>
   </main>
 
-  <!-- Floating Popups -->
-  <div id="categoryPopup" class="popup-backdrop hidden">
-    <div class="popup">
-      <button class="popup-close" aria-label="Close">×</button>
-      <h3 class="popup-title">Browse Categories</h3>
-      <div id="popupCategories" class="popup-grid"></div>
-    </div>
-  </div>
-
-  <div id="itemPopup" class="popup-backdrop hidden">
-    <div class="popup">
-      <button class="popup-close" aria-label="Close">×</button>
-      <div id="itemDetail"></div>
-    </div>
-  </div>
-
-  <!-- Success / GCash QR -->
-  <div id="successPopup" class="popup-backdrop hidden">
-    <div class="popup">
-      <button class="popup-close" aria-label="Close">×</button>
-      <h3 class="popup-title">Order Received ✅</h3>
-      <p>Please settle your payment to proceed. Scan the GCash QR below:</p>
-      <div class="qr-wrap">
-        <!-- Keeping src is fine; popup stays hidden until JS opens it -->
-        <img id="gcashQR" alt="GCash QR" src="assets/qr/gcash.png">
+  <!-- Popups -->
+  <!-- Category Picker Popup (optional trigger in your UI) -->
+  <div id="categoryPopup" class="popup hidden">
+    <div class="popup-box">
+      <div class="popup-header">
+        <h3>Choose Category</h3>
+        <button class="popup-close" onclick="togglePopup('#categoryPopup', false)">×</button>
       </div>
-      <p class="small">After paying, staff will process your order. Keep your reference number.</p>
-      <div class="inline">
-        <button class="btn" id="paidBtn">I've Paid</button>
-        <button class="btn ghost" id="copyRefBtn">Copy Payment Instructions</button>
+      <div id="popupCategories" class="popup-body"></div>
+    </div>
+  </div>
+
+  <!-- Item Detail Popup (long-press) -->
+  <div id="itemPopup" class="popup hidden">
+    <div class="popup-box">
+      <div class="popup-header">
+        <h3>Item</h3>
+        <button class="popup-close" onclick="togglePopup('#itemPopup', false)">×</button>
+      </div>
+      <div id="itemDetail" class="popup-body"></div>
+    </div>
+  </div>
+
+  <!-- GCash QR Popup -->
+  <div id="gcashPopup" class="popup hidden">
+    <div class="popup-box">
+      <div class="popup-header">
+        <h3>GCash Payment</h3>
+        <button class="popup-close" onclick="togglePopup('#gcashPopup', false)">×</button>
+      </div>
+      <div class="popup-body center">
+        <p class="muted">Please scan to pay. We’ll process your order after payment.</p>
+        <img src="assets/gcash-qr.png" alt="GCash QR" class="qr" />
       </div>
     </div>
   </div>
 
-  <!-- Toast Message -->
+  <!-- Toast -->
   <div id="toast" class="toast hidden"></div>
 
-  <!-- Scripts (config first). Add cache-busting to beat old cached JS -->
-  <script src="config.js?v=8"></script>
-  <script src="main.js?v=8"></script>
-
-  <!-- Register SW only on custom domain (prevents github.io from caching old JS) -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      const onGithubIo = location.hostname.endsWith('github.io');
-      if (!onGithubIo) {
-        navigator.serviceWorker.register('pwa/sw.js?v=8').catch(() => {});
-      }
-    }
-  </script>
+  <!-- Scripts -->
+  <script src="main.js"></script>
 </body>
 </html>
