--- a/order/index.html
+++ b/order/index.html
@@ -30,12 +30,12 @@
 <body>
   <header class="app-header">
     <div class="brand">
-      <img id="logoImg" src="assets/icons/logo.png" alt="Stone Grill" class="logo">
-      <div class="brand-text">
-        <h1>Stone Grill</h1>
-        <p>Enjoyable & Relaxing</p>
-      </div>
-    </div>
+  <img id="logoImg" src="assets/icons/icon-192.png" alt="Stone Grill" class="logo">
+  <div class="brand-text">
+    <h1>Stone Grill</h1>
+    <p>Enjoyable & Relaxing</p>
+  </div>
+</div>
     <div class="cart-summary">
       <div class="total-label">Total</div>
       <div id="cartTotal" class="total-value">₱0.00</div>
