--- a/order/index.html
+++ b/order/index.html
@@ -29,13 +29,16 @@
 </head>
 <body>
   <header class="app-header">
-    <div class="brand">
-  <img id="logoImg" src="assets/icons/icon-192.png" alt="Stone Grill" class="logo">
-  <div class="brand-text">
-    <h1>Stone Grill</h1>
-    <p>Enjoyable & Relaxing</p>
-  </div>
-</div>
+    <!-- ✅ Brand is now a link; uses your requested icon -->
+    <a href="/" class="brand">
+      <img id="logoImg" src="assets/icons/icon-192.png" alt="Stone Grill" class="logo">
+      <div class="brand-text">
+        <h1>Stone Grill</h1>
+        <p>Enjoyable & Relaxing</p>
+      </div>
+    </a>
+
+    <!-- Cart summary unchanged -->
     <div class="cart-summary">
       <div class="total-label">Total</div>
       <div id="cartTotal" class="total-value">₱0.00</div>
@@ -66,22 +69,23 @@
     <aside class="cart-col">
       <!-- Cart -->
       <div class="card highlight breathe">
-  <h2 class="card-title">🦾 Your Order</h2>
+        <h2 class="card-title">🦾 Your Order</h2>
 
-  <div id="cartItems" class="cart-items"></div>
+        <div id="cartItems" class="cart-items"></div>
 
-  <!-- Subtotal row -->
-  <div class="cart-totals">
-    <div class="row">
-      <span>Subtotal</span>
-      <span id="cartSubtotal">₱0.00</span>
-    </div>
-  </div>
+        <!-- Subtotal row -->
+        <div class="cart-totals">
+          <div class="row">
+            <span>Subtotal</span>
+            <span id="cartSubtotal">₱0.00</span>
+          </div>
+        </div>
 
-  <div class="cart-actions">
-    <button id="clearCartBtn" class="btn ghost">Clear</button>
-  </div>
-</div>
+        <div class="cart-actions">
+          <button id="clearCartBtn" class="btn ghost">Clear</button>
+        </div>
+      </div>
+
       <!-- Customer Info -->
       <div class="card">
         <h2 class="card-title">👤 Customer Info</h2>
@@ -166,7 +170,7 @@
   <!-- Toast Message -->
   <div id="toast" class="toast hidden"></div>
 
-  <!-- Scripts (config first). Add cache-busting to beat old cached JS -->
+  <!-- Scripts (config first). Add cache-busting to beat old cached JS) -->
   <script src="config.js?v=8"></script>
   <script src="main.js?v=8"></script>
 
