--- a/order/index.html
+++ b/order/index.html
@@ -19,11 +19,49 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Stone Grill -- Online Order">
   <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
-  <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
+  <meta property="og:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/order/">
 
   <!-- Ensure .hidden works even if old CSS is cached -->
   <style>.hidden{display:none!important}</style>
+ <!-- ✅ SEO Title & Description -->
+<title>Stone Grill — Order Online | Sizzling Plates, Seafood & Filipino Favorites</title>
+<meta name="description" content="Skip the line. Order your Stone Grill favorites online — sizzling plates, seafood, and Filipino classics. Dine-in or take-out. Fast confirmation.">
+
+<!-- ✅ Facebook / Messenger / Instagram -->
+<meta property="og:title" content="Stone Grill — Order Online Now">
+<meta property="og:description" content="Hot, fresh, and ready when you are. Order sizzling plates, seafood, and Filipino favorites. Dine-in or take-out. Fast confirmation.">
+<meta property="og:image" content="https://stonegrillresto.net/assets/stonegrill-seafood-boodle.jpg">
+<meta property="og:url" content="https://stonegrillresto.net/order/">
+<meta property="og:type" content="website">
+
+<!-- ✅ Twitter (X) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Stone Grill — Order Online Now">
+<meta name="twitter:description" content="Hot, fresh, and ready when you are. Dine-in or take-out. Fast confirmation.">
+<meta name="twitter:image" content="https://stonegrillresto.net/assets/stonegrill-seafood-boodle.jpg">
+
+<!-- ✅ Structured Data (helps Google show rich results) -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"Restaurant",
+  "name":"Stone Grill Restaurant",
+  "url":"https://stonegrillresto.net/",
+  "image":"https://stonegrillresto.net/assets/stonegrill-seafood-boodle.jpg",
+  "slogan":"Enjoyable and Relaxing",
+  "servesCuisine":["Filipino","Seafood","Grill"],
+  "telephone":"053 568 0539",
+  "sameAs":["https://www.facebook.com/stonecitygrill"],
+  "hasMenu":"https://stonegrillresto.net/order/",
+  "potentialAction":{
+    "@type":"OrderAction",
+    "target":"https://stonegrillresto.net/order/",
+    "deliveryMethod":["https://schema.org/OnSitePickup"],
+    "name":"Order Online"
+  }
+}
+</script>
 </head>
 <body>
   <header class="app-header">
