--- a/order/index.html
+++ b/order/index.html
@@ -26,12 +26,12 @@
   <style>.hidden{display:none!important}</style>
  <!-- ✅ SEO Title & Description -->
 <title>Stone Grill — Order Online | Sizzling Plates, Seafood & Filipino Favorites</title>
-<meta name="description" content="Skip the line. Order your Stone Grill favorites online — sizzling plates, seafood, and Filipino classics. Dine-in or take-out. Fast confirmation.">
+<meta name="description" content="Skip the wait. Order your Stone Grill favorites online — sizzling plates, seafood, and Filipino classics. Dine-in or take-out. Fast confirmation.">
 
 <!-- ✅ Facebook / Messenger / Instagram -->
 <meta property="og:title" content="Stone Grill — Order Online Now">
 <meta property="og:description" content="Hot, fresh, and ready when you are. Order sizzling plates, seafood, and Filipino favorites. Dine-in or take-out. Fast confirmation.">
-<meta property="og:image" content="https://stonegrillresto.net/assets/stonegrill-seafood-boodle.jpg">
+<meta property="og:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
 <meta property="og:url" content="https://stonegrillresto.net/order/">
 <meta property="og:type" content="website">
 
@@ -39,8 +39,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Stone Grill — Order Online Now">
 <meta name="twitter:description" content="Hot, fresh, and ready when you are. Dine-in or take-out. Fast confirmation.">
-<meta name="twitter:image" content="https://stonegrillresto.net/assets/stonegrill-seafood-boodle.jpg">
-
+<meta name="twitter:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
 <!-- ✅ Structured Data (helps Google show rich results) -->
 <script type="application/ld+json">
 {
