--- a/order/index.html
+++ b/order/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stone Grill -- Online Order</title>
-  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant -- Enjoyable & Relaxing." />
+  <meta name="viewport" content="width=device-width, initial-scale=<title>Stone Grill — Order Online | Sizzling Plates, Seafood & Filipino Favorites</title>
+<meta name="description" content="Skip the wait. Order your Stone Grill favorites online — sizzling plates, seafood, and Filipino classics. Dine-in or take-out. Fast confirmation.">
+
+<!-- ✅ Facebook / Messenger / Instagram -->
+<meta property="og:title" content="Stone Grill — Order Online Now">
+<meta property="og:description" content="Hot, fresh, and ready when you are. Order sizzling plates, seafood, and Filipino favorites. Dine-in or take-out. Fast confirmation.">
+<meta property="og:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
+<meta property="og:url" content="https://stonegrillresto.net/order/">
+<meta property="og:type" content="website">
+
+<!-- ✅ Twitter (X) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Stone Grill — Order Online Now">
+<meta name="twitter:description" content="Hot, fresh, and ready when you are. Dine-in or take-out. Fast confirmation.">
+<meta name="twitter:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
 
   <!-- PWA -->
   <link rel="manifest" href="pwa/manifest.webmanifest">
@@ -25,21 +37,7 @@
   <!-- Ensure .hidden works even if old CSS is cached -->
   <style>.hidden{display:none!important}</style>
  <!-- ✅ SEO Title & Description -->
-<title>Stone Grill — Order Online | Sizzling Plates, Seafood & Filipino Favorites</title>
-<meta name="description" content="Skip the wait. Order your Stone Grill favorites online — sizzling plates, seafood, and Filipino classics. Dine-in or take-out. Fast confirmation.">
 
-<!-- ✅ Facebook / Messenger / Instagram -->
-<meta property="og:title" content="Stone Grill — Order Online Now">
-<meta property="og:description" content="Hot, fresh, and ready when you are. Order sizzling plates, seafood, and Filipino favorites. Dine-in or take-out. Fast confirmation.">
-<meta property="og:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
-<meta property="og:url" content="https://stonegrillresto.net/order/">
-<meta property="og:type" content="website">
-
-<!-- ✅ Twitter (X) -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Stone Grill — Order Online Now">
-<meta name="twitter:description" content="Hot, fresh, and ready when you are. Dine-in or take-out. Fast confirmation.">
-<meta name="twitter:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
 <!-- ✅ Structured Data (helps Google show rich results) -->
 <script type="application/ld+json">
 {
