--- a/order/index.html
+++ b/order/index.html
@@ -125,6 +125,14 @@
       <!-- Customer Info -->
       <div class="card">
         <h2 class="card-title">👤 Customer Info</h2>
+        <div class="card muted">
+  <p>
+    💬 Need help?
+    <a href="#" id="howToOrderLink">How to Order</a>
+    or message us on Facebook / call
+    <a href="tel:0535680539">053 568 0539</a>.
+  </p>
+</div>
         <form id="orderForm" autocomplete="on">
           <label>Full Name
             <input type="text" id="fullName" required placeholder="Juan Dela Cruz">
