--- a/order/index.html
+++ b/order/index.html
@@ -206,7 +206,34 @@
 
   <!-- Toast Message -->
   <div id="toast" class="toast hidden"></div>
+  
+<!-- How to Order Popup -->
+<div id="howToOrderPopup" class="popup-backdrop hidden" aria-hidden="true">
+  <div class="popup" role="dialog" aria-modal="true" aria-labelledby="howtoTitle">
+    <button class="popup-close" aria-label="Close">×</button>
+    <h3 id="howtoTitle" class="popup-title">How to Order</h3>
 
+    <ol style="padding-left:20px; margin:10px 0;">
+      <li>Go to <strong>stonegrillresto.net/order</strong> (mobile or desktop).</li>
+      <li>Select a category and tap <strong>Add</strong> beside each dish.</li>
+      <li>Review <strong>Your Order</strong>; adjust quantities or remove items.</li>
+      <li>Fill in:
+        <ul>
+          <li><strong>Full Name</strong> & <strong>Mobile</strong> (+63 auto)</li>
+          <li><strong>Order Type</strong> (Dine-in / Take-out)
+            <ul><li>If Dine-in → enter <strong>Number of Persons</strong>.</li></ul>
+          </li>
+          <li><strong>Date & Time</strong> for dine-in/pick-up</li>
+          <li><strong>Special Requests</strong> (optional)</li>
+        </ul>
+      </li>
+      <li>Click <strong>Submit Order</strong> — you’ll see a confirmation toast.</li>
+      <li>We’ll message you for payment instructions. Orders are processed after payment.</li>
+    </ol>
+
+    <p class="small" style="color:#666;">Tip: Keep your phone nearby in case we need to confirm details.</p>
+  </div>
+</div>
   <!-- Scripts (config first). Bump version to bust cache -->
   <script src="config.js?v=10"></script>
   <script src="main.js?v=10"></script>
