--- a/order/index.html
+++ b/order/index.html
@@ -126,13 +126,7 @@
       <div class="card">
         <h2 class="card-title">👤 Customer Info</h2>
         <div class="card muted">
-  <p>
-    💬 Need help?
-    <a href="#" id="howToOrderLink">How to Order</a>
-    or message us on Facebook / call
-    <a href="tel:0535680539">053 568 0539</a>.
-  </p>
-</div>
+
         <form id="orderForm" autocomplete="on">
           <label>Full Name
             <input type="text" id="fullName" required placeholder="Juan Dela Cruz">
@@ -172,10 +166,12 @@
       </div>
 
       <div class="card muted">
-        <p>💬 Need help? Message us on Facebook or call <a href="tel:0535680539">053 568 0539</a>.</p>
-      </div>
-    </aside>
-  </main>
+        <p>💬 Need help?
+    <a href="#" id="howToOrderLink">How to Order</a>
+    or message us on Facebook / call
+    <a href="tel:0535680539">053 568 0539</a>.
+  </p>
+</div>
 
   <!-- Popups (kept for future use; not triggered here) -->
   <div id="categoryPopup" class="popup-backdrop hidden">
