--- a/order/index.html
+++ b/order/index.html
@@ -81,22 +81,27 @@
   <main class="app-main">
     <section class="menu-col">
       <!-- Category Buttons -->
-      <div class="category-bar" id="categoryBar">
-        <button onclick="showCategory('pork')"><span class="cat-emoji">🐖</span><span>Pork</span></button>
-        <button onclick="showCategory('chicken')"><span class="cat-emoji">🐓</span><span>Chicken</span></button>
-        <button onclick="showCategory('beef')"><span class="cat-emoji">🐄</span><span>Beef</span></button>
-        <button onclick="showCategory('vegetables')"><span class="cat-emoji">🥦</span><span>Veggies</span></button>
-        <button onclick="showCategory('fish')"><span class="cat-emoji">🐟</span><span>Fish</span></button>
-        <button onclick="showCategory('noodles')"><span class="cat-emoji">🍜</span><span>Noodles/Pasta</span></button>
-        <button onclick="showCategory('bbq')"><span class="cat-emoji">🔥</span><span>Grilled/BBQ</span></button>
-        <button onclick="showCategory('soup')"><span class="cat-emoji">🍲</span><span>Soup</span></button>
-        <button onclick="showCategory('squid')"><span class="cat-emoji">🦑</span><span>Squid</span></button>
-        <button onclick="showCategory('shrimp')"><span class="cat-emoji">🦐</span><span>Shrimp</span></button>
-        <button onclick="showCategory('crabs')"><span class="cat-emoji">🦀</span><span>Crabs</span></button>
-        <button onclick="showCategory('specials')"><span class="cat-emoji">⭐</span><span>Specialties</span></button>
-        <button onclick="showCategory('refreshments')"><span class="cat-emoji">🧊</span><span>Refreshments</span></button>
-        <button onclick="showCategory('drinks')"><span class="cat-emoji">🥤</span><span>Drinks</span></button>
-      </div>
+    
+<div class="category-bar" id="categoryBar">
+  <button onclick="showCategory('pork')"><span class="cat-emoji">🐖</span><span>Pork</span></button>
+  <button onclick="showCategory('chicken')"><span class="cat-emoji">🐓</span><span>Chicken</span></button>
+  <button onclick="showCategory('beef')"><span class="cat-emoji">🐄</span><span>Beef</span></button>
+  <button onclick="showCategory('vegetables')"><span class="cat-emoji">🥦</span><span>Veggies</span></button>
+  <button onclick="showCategory('fish')"><span class="cat-emoji">🐟</span><span>Fish</span></button>
+  <button onclick="showCategory('noodles')"><span class="cat-emoji">🍜</span><span>Noodles/Pasta</span></button>
+  <button onclick="showCategory('bbq')"><span class="cat-emoji">🔥</span><span>Grilled/BBQ</span></button>
+  <button onclick="showCategory('soup')"><span class="cat-emoji">🍲</span><span>Soup</span></button>
+  <button onclick="showCategory('squid')"><span class="cat-emoji">🦑</span><span>Squid</span></button>
+  <button onclick="showCategory('shrimp')"><span class="cat-emoji">🦐</span><span>Shrimp</span></button>
+  <button onclick="showCategory('crabs')"><span class="cat-emoji">🦀</span><span>Crabs</span></button>
+
+  <!-- ✅ Set Meal restored -->
+  <button onclick="showCategory('setMeals')"><span class="cat-emoji">🍱</span><span>Set Meal</span></button>
+
+  <button onclick="showCategory('specials')"><span class="cat-emoji">⭐</span><span>Specialties</span></button>
+  <button onclick="showCategory('refreshments')"><span class="cat-emoji">🧊</span><span>Refreshments</span></button>
+  <button onclick="showCategory('drinks')"><span class="cat-emoji">🥤</span><span>Drinks</span></button>
+</div>
 
       <!-- Product List -->
       <div id="menuList" class="menu-list"></div>
