--- a/order/index.html
+++ b/order/index.html
@@ -94,6 +94,8 @@
   <button onclick="showCategory('squid')"><span class="cat-emoji">🦑</span><span>Squid</span></button>
   <button onclick="showCategory('shrimp')"><span class="cat-emoji">🦐</span><span>Shrimp</span></button>
   <button onclick="showCategory('crabs')"><span class="cat-emoji">🦀</span><span>Crabs</span></button>
+  <button onclick="showCategory('setMeals')"><span class="cat-emoji">🍱</span><span>Set Meal</span></button>
+<button onclick="showCategory('rice')"><span class="cat-emoji">🍚</span><span>Rice</span></button>
 
   <!-- ✅ Set Meal restored -->
   <button onclick="showCategory('setMeals')"><span class="cat-emoji">🍱</span><span>Set Meal</span></button>
