--- a/order/index.html
+++ b/order/index.html
@@ -144,10 +144,10 @@
           </label>
 
           <label>Order Type</label>
-          <div class="inline">
-            <label><input type="radio" name="orderType" value="Dine-in" required> Dine-in</label>
-            <label><input type="radio" name="orderType" value="Take-out" required> Take-out</label>
-          </div>
+         <div class="inline">
+            <label><input type="radio" name="orderType" value="Dine-in" required><span>Dine-in</span></label>
+            <label><input type="radio" name="orderType" value="Take-out" required><span>Take-out</span></label>
+        </div>
 
           <div id="personsWrap" class="hidden">
             <label>Number of Persons
