--- a/order/index.html
+++ b/order/index.html
@@ -72,8 +72,8 @@
     </a>
 
     <div class="cart-summary">
-      <div class="total-label">Total</div>
-      <div id="cartTotal" class="total-value">₱0.00</div>
+      <span class="total-label">Total:</span>
+      <span id="cartTotal" class="total-value">₱0.00</span>
       <button id="checkoutBtn" class="btn primary">Checkout</button>
     </div>
   </header>
